@@ -2,7 +2,6 @@ package com.localllama.plugin.util;
 
 import com.localllama.plugin.service.LocalLlamaClient;
 import com.localllama.plugin.ui.ChatMessage;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 import org.eclipse.swt.widgets.Display;
@@ -11,7 +10,7 @@ public class LocalLlamaQueryUtil {
 
     public static void asyncQuery(String prompt, String model, Consumer<String> callback) {
         StringBuffer responseBuilder = new StringBuffer();
-        List<ChatMessage> messages = Collections.singletonList(new ChatMessage(ChatMessage.SenderType.USER, prompt));
+        List<ChatMessage> messages = List.of(new ChatMessage(ChatMessage.Sender.USER, prompt));
 
         Runnable doneCallback = () -> {
             Display.getDefault().asyncExec(() -> {
